namespace Passes.Enums;
public enum BlurDirection
{
  Horizontal,
  Vertical,
  Both,
}
