namespace Passes.Enums;

public enum BlurQuality
{
  Low,
  Medium,
  High
}
