namespace Passes.Enums;

public enum ToneMappingType
{
  None,
  Reinhard,
  ACES,
  Filmic,
  Uncharted2
}
